--- a/source_sass/_variables.scss
+++ b/source_sass/_variables.scss
@@ -1,1 +1,14 @@
 // Insert your variables
+$blue           : #2176C7;
+$darkgrey		: #333;
+$white			: #fff;
+$offwhite		: #dcdcdc;
+$black			: #000;
+$gray			: #999;
+$lightgray		: #ccc;
+$lightergray	: #dfdfdf;
+$lightblue		: #00ccff;
+
+$font-heading: 'Raleway', sans-serif;
+
+$default-border-radius	: 10px;
